# src/components/quizzes/questions/questionsRouter.js
@@ -30,6 +30,10 @@ module.exports = function questionsRouter(_app) {
 
   async function checksQuestionByIdHandler(_req, res, next, question_id) {
     logger.silly(`checksQuestionByIdHandler@${question_id}`);
+    if (Number.isNaN(parseInt(question_id, 10)))
+    return next(
+      createError.BadRequest(`Invalid content: question_id is not an integer`)
+    );
     const { quiz_id } = res.locals.quiz;
     try {
       const question = await QuestionDAO.selectById(quiz_id, question_id);
@@ -47,24 +51,25 @@ module.exports = function questionsRouter(_app) {
     }
   }
 
+  function validateQuestion (req, _res, next) {
+    const { sentence, propositions } = req.body;
+    if (!sentence)
+      return next(
+        createError.BadRequest(`Invalid content: sentence is missing`)
+      );
+    if (!Array.isArray(propositions))
+      return next(
+        createError.BadRequest(`Invalid content: propositions is not an array`)
+      );
+    
+    // @todo : checks details of propositions
+    return next();
+  }
+
   async function postQuestionHandler(req, res, next) {
     try {
       const { question_id, sentence, propositions } = req.body;
       const { quiz_id } = res.locals.quiz;
-      if (Number.isNaN(parseInt(question_id, 10)))
-        return next(
-          createError.BadRequest(
-            `Invalid content: question_id is not an integer`
-          )
-        );
-      if (!sentence)
-        return next(
-          createError.BadRequest(`Invalid content: sentence is missing`)
-        );
-      if (!Array.isArray(propositions))
-        return next(
-          createError.BadRequest(`Invalid content: propositions is not an array`)
-        );
       const question = { quiz_id, question_id, sentence, propositions };
       const questionId = await QuestionDAO.insert(question);
       logger.silly(`postQuestionHandler@${JSON.stringify(questionId)}`);
@@ -75,12 +80,27 @@ module.exports = function questionsRouter(_app) {
     }
   }
 
-  async function delQuestionHandler(req, res, next) {
+  async function putQuestionHandler(req, res, next) {
     const { quiz_id } = res.locals.quiz;
-    const { user_id } = res.locals.user;
     const { question_id } = res.locals.question;
     try {
-      const deletedQuiz = await QuestionDAO.del(quiz_id, question_id, user_id);
+
+      const { sentence, propositions } = req.body;
+      const question = { quiz_id, question_id, sentence, propositions };
+      const questionId = await QuestionDAO.update(question);
+      logger.silly(`putQuestionHandler@${JSON.stringify(questionId)}`);
+      return res.status(201).send(questionId);
+    } catch (err) {
+      logger.debug(`putQuestionHandler throw ${err}`);
+      return next(err);
+    }
+  }
+
+  async function delQuestionHandler(req, res, next) {
+    const { quiz_id } = res.locals.quiz;
+    const { question_id } = res.locals.question;
+    try {
+      const deletedQuiz = await QuestionDAO.del(quiz_id, question_id);
       logger.silly(`delQuestionHandler@${deletedQuiz}`);
       res.send(deletedQuiz);
       return deletedQuiz;
@@ -107,7 +127,15 @@ module.exports = function questionsRouter(_app) {
   router.post('/', [
     authFromApiKeyHandler,
     checksQuizOwnership,
+    validateQuestion,
     postQuestionHandler,
+  ]);
+
+  router.put('/:question_id', [
+    authFromApiKeyHandler,
+    checksQuizOwnership,
+    validateQuestion,
+    putQuestionHandler,
   ]);
 
   // curl -X DELETE "http://localhost:3000/quizzes/36/questions/42" -H  "accept: application/json" -H  "X-API-KEY: 944c5fdd-af88-47c3-a7d2-5ea3ae3147da" -H  "Content-Type: application/json"
